Remove blog and publications; switch home to page layout

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,3 +2,4 @@
 .post-title { letter-spacing: 0.2px; }
 .site-title { font-weight: 700; }
 img { image-rendering: -webkit-optimize-contrast; }
+.feed-subscribe { display: none; }
